# llmstudio

./: .gitignore  CMakeLists.txt
installer/: llmstudio.iss
src/: main.cpp  mainwindow.cpp  mainwindow.h
